--- a/symfony/templates/user/_delete_form.html.twig
+++ b/symfony/templates/user/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('app_user_delete', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button class="btn">Delete</button>
+    <button class="bg-red-700 hover:bg-red-600 p-2 px-5 rounded-2xl mt-2">Supprimer le profil</button>
 </form>
