--- a/symfony/templates/user/edit.html.twig
+++ b/symfony/templates/user/edit.html.twig
@@ -1,11 +1,11 @@
 
 
 {% block body %}
-    <h1>Mise à jour du profil</h1>
+    
+    
 
-    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('user/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
+    
+    
 
-    <a href="{{ path('app_user_show', {'id': app.user.id}) }}">Retour au profil</a>
-
-    {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
