affichage des saisons dans mes séries

--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -24,7 +24,7 @@
                                 <a href="{{ path('app_series_add',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="rounded-2xl text-2xl p-4 px-10 hover:bg-blue-600 bg-blue-700" type="submit">Suivre</button></a>  
                             {% endif %}
                         {% endif %}
-                        <a class="lg:mt-5 lg:ml-0 ml-5 " href="{{ path('app_rating_rates', {'id': series.id}) }}"><h1 class="bg-yellow-400 w-max p-2 px-3 rounded-xl text-black font-semibold">Voir les avis</h1></a>
+                        <a class="lg:mt-5 lg:ml-0 ml-5 " href="{{ path('app_rating_rates', {'id': series.id}) }}"><h1 class=" bg-yellow-400 w-max p-2 px-3 rounded-xl text-black font-semibold hover:bg-yellow-200">Voir les avis</h1></a>
                     </div>
                 </div>
 
