--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
 {{ form_start(SeriesSearchForm) }}
 </form>
-<form class="wrap py-10" action="{{ path('app_series_index') }}" method="get">
+<form class="wrap" action="{{ path('app_series_index') }}" method="get">
     <div class="flex flex-row m-8 mx-24 py-0">
         <div>
             {{ form_row(SeriesSearchForm.genre, { 'attr': {'class': 'flex-shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-left text-gray-900 bg-gray-100 border border-gray-300 rounded-l-lg hover:bg-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:ring-gray-700 dark:text-white dark:border-gray-600'} }) }}
