--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -58,7 +58,7 @@
                     {% if avance < count %}
                     <div class="mt-2">
                         <h1 class="text-center text-lg text-white">Episodes vus : {{ avance }}/{{count}}</h1>
-                        <h1 class="text-center text-lg text-white">Saisons vus  : {{ serie.getNumberSeasonView(user) }}/{{serie.seasons|length}}</h1>
+                        <h1 class="text-center text-lg text-white">Saisons vus  : {{ serie.getNumberSeasonView(user, em) }}/{{serie.seasons|length}}</h1>
                     </div>
                     {% elseif avance == count %}
                     <div class="mt-2">
