--- a/symfony/templates/rating/show.html.twig
+++ b/symfony/templates/rating/show.html.twig
@@ -30,6 +30,7 @@
                 <h1 class="mx-2 font-semibold">{{ rating.value/2 }}/5</h1>
             </div>
             <h1 class="font-semibold ">{{ rating.date ? rating.date|date('d/m/Y') : '' }}</h1>
+            <h1 class="font-semibold ">{{ interval }}</h1>
         </div>
         <p class="break-all mx-2 py-5 w-5/6 font-semibold text-lg leading-snug ">{{ rating.comment }}</p>
     </div>
