--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -11,10 +11,22 @@
 
 {% block body %}
 <div class="flex-col flex w-4/5 mx-auto">
+    {% if app.user.id != user.id %}
+    <a href="{{ path('app_user_add_follow', {'id':app.user.id })}} "><button type="submit" class="px-5 p-2 bg-white">Suivre</button></a>
+        {% if user.getFollowing.contains(user) %}
+            <a href=" "><button type="submit" class="px-5 p-2 bg-white">Suivi</button></a>
+        {% endif %}
+    {% endif %}
+    {% if user.getFollowing|length == 0 %}
+    <a><button type="submit" class="bg-white p-2 px-5">Voir ses followers</button></a>
+    {% else %}
+    <a><button type="submit" class="bg-white p-2 px-5">Voir ses followers</button></a>
+    {% endif%}
     {% if app.user.id == user.id %}
         <a href="{{ path('app_series_index') }}"><button class=" text-white hover:text-blue-900 bg-blue-800 hover:bg-blue-800 p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
         <div class="flex items-center justify-between">
-        <h1 class="text-3xl text-cyan-200 mb-2 font-semibold">{{ user.name }}</h1>
+        <h1 class="text-3xl text-cyan-200 mb-2 font-semibold">{{ user.name }} -  </h1>
+        
         <a href="{{ path('app_user_edit', {'id': app.user.getId})}}">
             <button class="bg-blue-700 hover:bg-blue-600 text-white px-5 p-2 rounded-2xl">Changer infos personnelles</button>
         </a>
