--- a/symfony/templates/rating/rates.html.twig
+++ b/symfony/templates/rating/rates.html.twig
@@ -9,6 +9,11 @@
         {% for r in seriesRates %}
             <div class="bg-blue-800 w-max m-2 rounded-lg">
                 <h1 class="text-sm p-2 pb-1">Ajouté le {{ r.date ? r.date|date('d-m-Y') : '' }}</h1>
+                {% if r.getDate.diff(dateActuelle).format("%a") > 0 %}
+                    <h1 class="text-sm p-2 pb-1">Il y a {{ r.getDate.diff(dateActuelle).format("%a") }} jours</h1>
+                {% else %}
+                    <h1 class="text-sm p-2 pb-1">Il y a {{ r.getDate.diff(dateActuelle).format("%H h %I m et %S s") }}</h1>
+                {% endif %}
                 <h1 class="bg-blue-500 px-5 p-2 mb-2 text-lg text-center text-black font-semibold">Critique faite par {{ r.user.getName}}</h1>
                 <div class="flex flex-col m-5">
                     <div class="items-center flex ">
