--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -12,16 +12,29 @@
 {% block body %}
 <div class="flex-col flex w-4/5 mx-auto">
     {% if app.user.id != user.id %}
-    <a href="{{ path('app_user_add_follow', {'id':app.user.id })}} "><button type="submit" class="px-5 p-2 bg-white">Suivre</button></a>
-        {% if user.getFollowing.contains(user) %}
+    {# gestion des followers #}
+    
+        {% if app.user.getFollowing.contains(user) %}
             <a href=" "><button type="submit" class="px-5 p-2 bg-white">Suivi</button></a>
+        {% else %}
+            <a href="{{ path('app_user_add_follower', {'id':user.id})}} "><button type="submit" class="px-5 p-2 bg-white">Suivre</button></a>
         {% endif %}
     {% endif %}
-    {% if user.getFollowing|length == 0 %}
-    <a><button type="submit" class="bg-white p-2 px-5">Voir ses followers</button></a>
+    {% if user.getFollowers|length == 1 %}
+        <a href="{{ path('app_user_see_followers', {'id': user.id})}} "><button type="submit" class="mb-2 rounded-2xl bg-white p-2 px-5">Voir son follower</button></a>
+    {% elseif user.getFollowers|length == 0 %}
+        <a href="{{ path('app_user_see_followers', {'id': user.id})}} "><button type="submit" class="rounded-2xl mb-2 bg-white p-2 px-5">Pas de follower</button></a>
     {% else %}
-    <a><button type="submit" class="bg-white p-2 px-5">Voir ses followers</button></a>
+        <a href="{{ path('app_user_see_followers', {'id': user.id})}} "><button type="submit" class="rounded-2xl mb-2 bg-white p-2 px-5">Voir ses {{ user.getFollowers|length }} followers</button></a>
     {% endif%}
+    {% if user.getFollowing|length == 1 %}
+        <a href="{{ path('app_user_see_follows', {'id': user.id})}} "><button type="submit" class="rounded-2xl bg-white p-2 px-5">Voir son follow</button></a>
+    {% elseif user.getFollowing|length == 0 %}
+        <a href="{{ path('app_user_see_follows', {'id': user.id})}}"><button type="submit" class="rounded-2xl bg-white p-2 px-5">Pas de follow</button></a>
+    {% else %}
+        <a href="{{ path('app_user_see_follows', {'id': user.id})}}"><button type="submit" class="rounded-2xl bg-white p-2 px-5">Voir ses {{ user.getFollowing|length }} follows</button></a>
+    {% endif%}
+
     {% if app.user.id == user.id %}
         <a href="{{ path('app_series_index') }}"><button class=" text-white hover:text-blue-900 bg-blue-800 hover:bg-blue-800 p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
         <div class="flex items-center justify-between">
