--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -55,7 +55,7 @@
                       <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-white pt-1">
-                      <li class=""><a class="rounded-t bg-blue-700 hover:bg-blue-500 py-2 px-4 block whitespace-no-wrap" href="{{ path('app_admin_dashboard') }}">
+                      <li class=""><a class="rounded-t bg-blue-700 hover:bg-blue-500 py-2 px-4 block whitespace-no-wrap" href="{{ path('app_user_index') }}">
                       {% if app.user.isAdmin() %}<div class="no-wrap"><i class="fa-sharp fa-solid fa-screwdriver-wrench"></i>Tableau de bord</div>
                       {% else %}<i class="fa-solid fa-users"></i> Utilisateurs
                       {% endif %}</a></li>
@@ -94,7 +94,7 @@
           
             <div class="bg-red-500 text-white text-center p-4">
               Vous incarnez actuellement <i class="fa-solid fa-user"></i><strong>{{ app.user.email }}</strong> |
-              <a href="{{ impersonation_exit_path(path('app_admin_dashboard') ) }}" style="text-decoration: underline;"><i class="fa-solid fa-right-from-bracket"></i> Arrêter d'incarner</a>
+              <a href="{{ impersonation_exit_path(path('app_user_index') ) }}" style="text-decoration: underline;"><i class="fa-solid fa-right-from-bracket"></i> Arrêter d'incarner</a>
             </div>
           </div>
         {% endif %}
