--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -65,13 +65,13 @@
                              <img class="w-4 h-4" src="{{ asset('img/star_empty.png') }}">
                         {% endif %}
                     {% endfor %}
-                    <h1 class="text-base mt-2 ml-2 text-white">({{ series.getNumberRates }} votes)</h1> 
+                    <h1 class="text-base ml-2 text-white">({{ series.getNumberRates }} votes)</h1> 
                     </div>
                 {% else %}
                     <h1 class="text-2xl mb-5">Pas assez de notes</h1>
                 {% endif %}
 
-                <h3 class="titre w-full titre font-bold text-white text-2xl text-center pt-2 pb-0">{{ series.title }} </h3>
+                <h3 class="titre w-full titre font-bold text-white text-2xl text-center pt-1 pb-1">{{ series.title }} </h3>
                 
                 <div class="poster w-full">
                     {% if app.user %}
