update style show user

--- a/symfony/templates/user/edit.html.twig
+++ b/symfony/templates/user/edit.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
 
 <div class="text-white text-xl">
-    <a class="bg-blue-800 hover:bg-blue-700 text-lg text-white p-2  px-5 rounded-2xl" href="{{ path('app_user_show', {'id': app.user.id}) }}">Retour au profil</a>
+    <a class="bg-blue-800 hover:bg-blue-700 text-lg text-white p-2 mx-5  px-5 rounded-2xl" href="{{ path('app_user_show', {'id': app.user.id}) }}">Retour au profil</a>
 
 {{ form_start(form) }}
 
