--- a/symfony/templates/base.html.twig
+++ b/symfony/templates/base.html.twig
@@ -55,12 +55,15 @@
                       <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/> </svg>
                     </button>
                     <ul class="dropdown-menu absolute hidden text-white pt-1">
-                      <li class=""><a class="rounded-t bg-blue-700 hover:bg-blue-500 py-2 px-4 block whitespace-no-wrap" href="{{ path('app_admin_dashboard') }}">
-                      {% if app.user.isAdmin() %}<div class="no-wrap"><i class="fa-sharp fa-solid fa-screwdriver-wrench"></i>Tableau de bord</div>
-                      {% else %}<i class="fa-solid fa-users"></i> Utilisateurs
+                      <li class=""><a class="rounded-t bg-blue-700 hover:bg-blue-500 py-2 px-4 block whitespace-no-wrap" href="{{ path('app_user_index') }}">
+                      {% if app.user.isAdmin() %}
+                        <div class="no-wrap"><i class="fa-sharp fa-solid fa-screwdriver-wrench"></i> Utilisateurs</div>
+                        <li class=""><a class="bg-blue-700 hover:bg-blue-500 py-2 px-4 block whitespace-no-wrap" href="{{ path('app_admin_dashboard') }}"><i class="fa-solid fa-file-import"></i> Import séries</a></li>
+                      {% else %}
+                        <i class="fa-solid fa-users"></i> Utilisateurs
                       {% endif %}</a></li>
                       <li class=""><a class="bg-blue-700 hover:bg-blue-500 py-2 px-4 block whitespace-no-wrap" href="{{ path('app_user_show', {'id':app.user.id}) }}"><i class="fa-solid fa-bookmark pl-1 pr-2"></i> Mes Séries</a></li>
-                      <li class=""><a class="rounded-b bg-blue-500 hover:bg-blue-custom py-2 px-4 block whitespace-no-wrap bg-red-700 hover:bg-red-400" href="{{ path('app_logout') }}"><i class="fa-solid fa-person-through-window"></i> Déconnexion</a></li>
+                      <li class=""><a class="rounded-b hover:bg-blue-custom py-2 px-4 block whitespace-no-wrap bg-red-700 hover:bg-red-400" href="{{ path('app_logout') }}"><i class="fa-solid fa-person-through-window"></i> Déconnexion</a></li>
                     </ul>
                   </div>
             </li>
