--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -18,6 +18,9 @@
             <a href="{{ path('app_user_gen', {'id':500})}} "><button class="text-3xl text-center mb-2">Créer 500 utilisateurs</button></a>
         {% endif %}
         {% if app.user.isAdmin() %}
+            <a href="{{ path('app_rating_gen', {'id':1})}} "><button class="text-3xl text-center mb-2">Générer des critiques</button></a>
+        {% endif %}
+        {% if app.user.isAdmin() %}
             <a href="{{ path('app_user_autodel')}} "><button class="text-3xl text-center mb-2">Supprimer tous les faux comptes</button></a>
         {% endif %}
 
