--- a/symfony/templates/rating/rates.html.twig
+++ b/symfony/templates/rating/rates.html.twig
@@ -4,7 +4,9 @@
 {% block body %}
 <div class="w-4/5 mx-auto text-white">
     <h1 class="text-3xl font-bold mb-5">Liste des critiques de {{ series.title}}</h1>
-
+        {{ form_start(valueForm) }}
+            {{ form_widget(valueForm) }}
+        {{ form_end(valueForm) }}
         <div class="flex flex-row-reverse w-max flex-wrap">
         {% for r in seriesRates %}
             <div class="bg-blue-800 w-max m-2 rounded-lg">
