--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -17,7 +17,7 @@
         {% else %}
             <a href="{{ path('app_user_add_follower', {'id':user.id})}} "><button type="submit" class="rounded-2xl px-5 p-2 bg-white">Suivre</button></a>
         {% endif %}
-        <div class="flex">
+        <div class="flex flex-row">
         {% if user.getFollowers|length == 1 %}
             <a href="{{ path('app_user_see_followers', {'id': user.id})}} "><button type="submit" class="hidden mb-2 rounded-2xl bg-white p-2 px-5">Voir son follower</button></a>
         {% elseif user.getFollowers|length == 0 %}
