--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -51,6 +51,7 @@
                 {% if app.user.isAdmin() %}
                     <th>Incarner</th>
                     <th>Administrateur</th>
+                    <th>Suspendre</th>
                     <th>Reset</th>
                 {% endif %}
             </tr>
@@ -82,6 +83,15 @@
                         <a href="{{ path('app_user_promote', {'id': user.id}) }}"><img class="h-12 w-20" src="{{ asset('img/admin_eteint.png')}} " style="margin: auto;"></a>
                         {% endif %}
                     </td>
+
+                    <td class=" border">
+                        {% if user.isSuspended() %}
+                        <a href="{{ path('app_user_suspend', {'id': user.id}) }}"><img class="h-12 w-20" src="{{ asset('img/admin_plein.png')}} " style="margin: auto;"></a>
+                        {% else %}
+                        <a href="{{ path('app_user_suspend', {'id': user.id}) }}"><img class="h-12 w-20" src="{{ asset('img/admin_eteint.png')}} " style="margin: auto;"></a>
+                        {% endif %}
+                    </td>
+
                     <td class="border">
                         <a href="{{ path('app_user_reset_mdp', {'id':user.id})}} "><button class="bg-red-500 p-2 rounded-xl">Reset MDP</button></a>
                     </td>
