--- a/symfony/templates/rating/rates.html.twig
+++ b/symfony/templates/rating/rates.html.twig
@@ -4,10 +4,12 @@
 {% block body %}
 <div class="w-4/5 mx-auto text-white">
     <h1 class="text-3xl font-bold mb-5">Liste des critiques de {{ series.title}}</h1>
+    <div class="text-black">
         {{ form_start(valueForm) }}
             {{ form_widget(valueForm) }}
         {{ form_end(valueForm) }}
-        <div class="flex flex-row-reverse w-max flex-wrap">
+    </div>
+    <div class="flex flex-row-reverse w-max flex-wrap">
         {% for r in seriesRates %}
             <div class="bg-blue-800 w-max m-2 rounded-lg">
                 <h1 class="text-sm p-2 pb-1">Ajouté le {{ r.date ? r.date|date('d-m-Y') : '' }}</h1>
@@ -40,8 +42,7 @@
                 <h1 class="text-2xl">Aucune critique trouvée</h1>
             </div>
         {% endfor %}
-        </div>
+    </div>
 </div>
 
-    {# <a href="{{ path('app_rating_new') }}">Create new</a> #}
 {% endblock %}
