--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -53,7 +53,7 @@
         {% else %}
             <a href="{{ path('app_user_see_follows', {'id': user.id})}}"><button type="submit" class=" rounded-2xl bg-white p-2 px-5">Voir ses {{ user.getFollowing|length }} follows</button></a>
         {% endif%}
-        <a href="{{ path('app_series_index') }}"><button class=" text-white hover:text-blue-900 bg-blue-800 hover:bg-blue-800 p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
+        <a href="{{ path('app_series_index') }}"><button class=" text-white hover:text-blue-900 bg-blue-800 hover:bg-blue-800 p-2 rounded-2xl m-5 ml-0" type="submit" >Retour aux séries</button></a>
         <div class="flex items-center justify-between">
         <h1 class="text-3xl text-cyan-200 mb-2 font-semibold">{{ user.name }} -  </h1>
         
