--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -9,6 +9,7 @@
 
 {% block body %}
 <div class="flex-col flex w-4/5 mx-auto">
+{% if user.isSuspended() == 0 or app.user.isAdmin() == 1 %}
     {% if app.user.id != user.id %}
     {# gestion des followers #}
     
@@ -153,10 +154,8 @@
         {% endif %}
         {% endfor %}
 </div>
-   
-            
-    
-
+{% else %}
+<h1 class="text-red-500"> Ce compte est Suspendu</h1> 
+{% endif %}
 </div>
-    
 {% endblock %}
