--- a/symfony/templates/rating/rates.html.twig
+++ b/symfony/templates/rating/rates.html.twig
@@ -7,7 +7,7 @@
 
         <div class="flex flex-row-reverse w-max flex-wrap">
         {% for r in seriesRates %}
-            {% if r.isAccepted() %}
+            {% if r.isAccepted() and r.user.isSuspended() == 0 %}
                 <div class="bg-blue-800 w-max m-2 rounded-lg">
                     <h1 class="text-sm p-2 pb-1">Ajouté le {{ r.date ? r.date|date('d-m-Y') : '' }}</h1>
                     {% if r.getDate.diff(dateActuelle).format("%a") > 0 %}
