--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -9,6 +9,11 @@
 {% endblock %}
 
 {% block body %}
+{% if app.user.isSuspended() %}
+<h1 class="mx-24 text-3xl text-red-500"> <i class="fa-solid fa-face-dizzy"></i><i class="fa-solid fa-face-dizzy"></i><i class="fa-solid fa-face-dizzy"></i>
+<br>Ton compte est suspendu, tu n'as plus accès à aucune fonctionnalité...
+<br>Déconnectes-toi pour de nouveau voir des séries! </h1>
+{% else %}
 {{ form_start(SeriesSearchForm) }}
 </form>
 <form class="wrap" action="{{ path('app_series_index') }}" method="get">
@@ -100,5 +105,5 @@
         <div class="mb-5">
             {{ knp_pagination_render(series)}}
         </div>
-
+{% endif %}
 {% endblock %}
