--- a/symfony/templates/user/index.html.twig
+++ b/symfony/templates/user/index.html.twig
@@ -14,21 +14,23 @@
             <h1 class="text-3xl text-center mb-2">Liste des utilisateurs</h1>
             {% endif %}
             
-            <div class="flex justify-between">
-            {% if app.user.isAdmin() %}
-            
-                <a href="{{ path('app_user_gen', {'id':5000})}} "><button class="text-xl text-center bg-green-600 p-2 px-5 rounded-xl  text-grey  mb-2">Créer 5000 utilisateurs</button></a>
-            {% endif %}
-            {% if app.user.isAdmin() %}
-                <a href="{{ path('app_rating_gen', {'id':1})}} "><button class="text-3xl text-center mb-2">Générer 10 000 critiques</button></a>
-            {% endif %}
-            {% if app.user.isAdmin() %}
-                <a href="{{ path('app_rating_del')}} "><button class="text-3xl text-center mb-2">Supprimer les critiques</button></a>
-            {% endif %}
-            {% if app.user.isAdmin() %}
-                <a href="{{ path('app_user_autodel')}} "><button class="text-xl text-center bg-red-700 p-2 px-5 rounded-xl text-grey mb-2">Supprimer tous les faux comptes</button></a>
-            
-            {% endif %}
+                <div class="flex flex-col justify-between">
+                    <div class="flex justify-between">
+                    {% if app.user.isAdmin() %}
+                    <a href="{{ path('app_user_gen', {'id':5000})}} "><button class="text-lg text-center bg-green-600 p-2 px-5 rounded-xl  text-grey  mb-2">Créer 5000 utilisateurs</button></a>
+                    {% endif %}
+                    {% if app.user.isAdmin() %}
+                    <a href="{{ path('app_rating_gen', {'id':1})}} "><button class="bg-green-600 text-lg text-center p-2 px-5 rounded-xl  text-grey mb-2">Générer 10 000 critiques</button></a>
+                    {% endif %}
+                    </div>
+                    <div class="flex flex-row-reverse justify-between">
+                    {% if app.user.isAdmin() %}
+                        <a href="{{ path('app_rating_del')}} "><button class="text-lg bg-red-700 text-center p-2 px-5 rounded-xl  text-grey mb-2">Supprimer les critiques</button></a>
+                    {% endif %}
+                    {% if app.user.isAdmin() %}
+                        <a href="{{ path('app_user_autodel')}} "><button class="text-lg text-center bg-red-700 p-2 px-5 rounded-xl text-grey mb-2">Supprimer les faux comptes</button></a>
+                    {% endif %}
+                    </div>
         {% endif %}
         </div>
 
@@ -41,7 +43,7 @@
                 {{ form_row(UserSearchForm.email, {
                 'label': 'E-mail',
                 }) }}
-            <button class="text-black bg-blue-500 rounded-2xl p-2 hover:bg-blue-custom" type="submit">Chercher</button>
+            <button class="text-black bg-blue-500 rounded-2xl px-5 p-2 hover:bg-blue-custom" type="submit">Chercher</button>
         </div>
         {{ form_end(UserSearchForm) }}
     </div>
