--- a/symfony/templates/admin/index.html.twig
+++ b/symfony/templates/admin/index.html.twig
@@ -1,18 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Tableau de bord administrateur{% endblock %}
+{% block title %}Import de séries{% endblock %}
 
 {% block body %}
-    <h1 class="text-3xl text-white">Tableau de bord administrateur</h1>
+    <h1 class="text-3xl text-center text-white">Import de séries</h1>
 
     {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+    <div class="flex mt-5 justify-around items-top">
+    {{ form_row(form.title, {
+        'label': 'Entrer un titre',
+        'attr': {'class': 'px-2 mr-2 flex text-md p-1 rounded-lg'},
+    }) }}
+    <button class="bg-blue-500 hover:bg-blue-700 text-white m-2 font-bold py-2 px-4 rounded-xl">
         Rechercher
     </button>
+    </div>
     {{ form_end(form) }}
     {% if response %}
         {% if response.Response == "True" %}
+        {% if already_added %}
+        <h1 class="mt-2 text-center text-lg font-semibold text-red-600">La série est déjà dans la base de données</h1>
+        {% else %}
+        <a class="bg-blue-500 hover:bg-blue-700 text-white w-max mx-auto flex font-bold py-2 px-4 rounded" href="{{ path('app_series_new', {'imdbId' :response.imdbID}) }}">
+           Ajouter
+        </a>
+    {% endif %}
+{% else %}
+    <h1 class="mt-2 text-center text-lg font-semibold text-red-600">La série n'a pas été trouvé</h>
+{% endif %}
             <div class="description m-auto lg:w-4/5 flex flex-col text-white font-semibold">
             <h1 class="titre-serie mb-5 text-6xl font-semibold lg:text-left text-center pt-5">{{ response.Title }}</h1>
                 <div class="flex h-full items-center m-auto lg:items-start lg:flex-row flex-col">
@@ -73,16 +88,7 @@
                     </div>
                 </div>
             </div>
-            {% if already_added %}
-                <h1>La série est déjà dans la base de données</h1>
-                {% else %}
-                <a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" href="{{ path('app_series_new', {'imdbId' :response.imdbID}) }}">
-                    Ajouter
-                </a>
-            {% endif %}
-        {% else %}
-            <h1>La série n'a pas été trouvé</h>
-        {% endif %}
+           
     {% endif %}
     {# <iframe src="/user" 
      width="100%" 
