--- a/symfony/templates/user/show.html.twig
+++ b/symfony/templates/user/show.html.twig
@@ -57,7 +57,7 @@
             {% endif%}
         </div>
     </div>
-        <a href="{{ path('app_series_index') }}"><button class=" text-white bg-blue-700 hover:bg-blue-600 p-2 rounded-2xl m-5 ml-0" type="submit" >Retour à l'accueil</button></a>
+        <a href="{{ path('app_series_index') }}"><button class=" text-white bg-blue-700 hover:bg-blue-600 p-2 rounded-2xl px-5 m-5 ml-0" type="submit" >Retour à la liste des séries</button></a>
         <div class="flex items-center justify-between flex-wrap">
         <h1 class="text-3xl text-cyan-200 mb-2 font-semibold">{{ user.name }}</h1>
         
