--- a/symfony/templates/series/index.html.twig
+++ b/symfony/templates/series/index.html.twig
@@ -57,42 +57,42 @@
         <div class="flex flex-wrap flex-row w-full items-center justify-center mb-5">
         {% for series in series %}
             <div class="serie-encadre border-none border-4 rounded-3xl flex flex-col-reverse mb-4 h-auto mx-10 mt-10 items-center">
-                {% if series.getNumberRates != 0 %}
+                {% if series['count'] != 0 %}
                     <div class="flex mb-1 items-center">
-                    {% for i in range(0.5, 5) %}
-                        {% if series.getMoyRates/2 >= i %}
-                            {% if series.getMoyRates/2 > i %}
+                    {% for i in range(1, 10,2) %}
+                        {% if series['avg']|round(1) >= i %}
+                            {% if series['avg']|round(1) > i %}
                                 <img class="w-4 h-4" src="{{ asset('img/star_fill.png') }}">
-                            {% elseif series.getMoyRates/2 == i %}
+                            {% elseif series['avg']|round(1) == i %}
                                 <img class="w-4 h-4" src="{{ asset('img/star_demi.png') }}">
                             {% endif %}
                         {% else %}
                              <img class="w-4 h-4" src="{{ asset('img/star_empty.png') }}">
                         {% endif %}
                     {% endfor %}
-                    <h1 class="text-base ml-2 text-white">({{ series.getNumberRates }} votes)</h1> 
+                    <h1 class="text-base ml-2 text-white">({{ series['count'] }} votes)</h1> 
                     </div>
                 {% else %}
                     <h1 class="text-2xl mb-5">Pas assez de notes</h1>
                 {% endif %}
 
-                <h3 class="titre w-full titre font-bold text-white text-2xl text-center pt-1 pb-1">{{ series.title }} </h3>
+                <h3 class="titre w-full titre font-bold text-white text-2xl text-center pt-1 pb-1">{{ series[0].title }} </h3>
                 
                 <div class="poster w-full">
                     {% if app.user %}
-                        {% if series in app.user.getSeries  %}
-                        <a href="{{ path('app_series_remove_from_index',  {'id': series.id, 'user_id':app.user.id}) }}">
+                        {% if series[0] in app.user.getSeries  %}
+                        <a href="{{ path('app_series_remove_from_index',  {'id': series[0].id, 'user_id':app.user.id}) }}">
                             <img class="backdrop-blur-sm bg-white/20 shadow-[3px_3px_15px_2px_rgba(0,0,0,0.5)] hover:bg-red-500/50  rounded-2xl rounded-bl-none rounded-tr-none serie-plus  absolute" width="60px" src="{{ asset('img/check.png') }}" />
                         </a>
                         {% else %}
-                        <a href="{{ path('app_series_add_from_index',  {'id': series.id, 'user_id':app.user.id}) }}">
+                        <a href="{{ path('app_series_add_from_index',  {'id': series[0].id, 'user_id':app.user.id}) }}">
                             <img class="backdrop-blur-sm bg-white/20 shadow-[3px_3px_15px_2px_rgba(0,0,0,0.5)] hover:bg-green-500/50 serie-check absolute rounded-2xl rounded-bl-none rounded-tr-none" width="60px" src="{{ asset('img/plus.png') }}" />
                         </a>
                         {% endif %}
                         
                     {% endif %}
-                    <a href="{{ path('app_series_show', {'id': series.id})}}">
-                        <img class="border-none rounded-b-none rounded-3xl h-full w-full" src="{{ series.displayPoster }}" alt="poster"></img>  
+                    <a href="{{ path('app_series_show', {'id': series[0].id})}}">
+                        <img class="border-none rounded-b-none rounded-3xl h-full w-full" src="{{ series[0].displayPoster }}" alt="poster"></img>  
                     </a>
                 
                 </div>
