ajout d'un bouton retour a la série depuis modification

--- a/symfony/templates/series/edit.html.twig
+++ b/symfony/templates/series/edit.html.twig
@@ -11,4 +11,6 @@
         <br>
     {% endfor %}
         <a href="{{ path('app_season_new', {'series': series.id}) }}">Ajouter une saison</a>
+        <br>
+        <a href="{{ path('app_series_show', {'id': series.id}) }}">Retour à la série</a>
 {% endblock %}
