--- a/symfony/templates/series/show.html.twig
+++ b/symfony/templates/series/show.html.twig
@@ -17,14 +17,17 @@
                 <img src="{{ series.displayPoster }}" alt="poster" class="poster w-2/5 min-w-48 max-w-md rounded-3xl mb-5">
                     <div class="flex flex-row lg:flex-col items-center mb-5 lg:mb-0">
                         {% if app.user %}
+                            {% if app.user.isAdmin() %}
+                                <a href="{{ path('app_series_edit', {'id': series.id}) }}"><button class="rounded-2xl text-2xl p-4 px-6 hover:bg-green-600 bg-green-700 mb-4" type="submit"><i class="fa-solid fa-pen-to-square"></i> Modifier</button></a>
+                            {% endif %}
                             {% if series in app.user.getSeries %}
-                                <a href="{{ path('app_series_remove',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="rounded-2xl text-2xl p-4 px-10 hover:bg-red-600 bg-red-700" type="submit">Enlever</button></a> 
+                                <a href="{{ path('app_series_remove',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="rounded-2xl text-2xl p-4 px-6 hover:bg-red-600 bg-red-700" type="submit"><i class="fa-regular fa-trash-can"></i> Ne plus suivre</button></a> 
 
                             {% else %}
-                                <a href="{{ path('app_series_add',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="rounded-2xl text-2xl p-4 px-10 hover:bg-blue-600 bg-blue-700" type="submit">Suivre</button></a>  
+                                <a href="{{ path('app_series_add',  {'id': series.id, 'user_id':app.user.id}) }} "><button class="rounded-2xl text-2xl p-4 px-6 hover:bg-blue-600 bg-blue-700" type="submit"><i class="fa-solid fa-bookmark"></i> Suivre</button></a>  
                             {% endif %}
                         {% endif %}
-                        <a class="lg:mt-5 lg:ml-0 ml-5 " href="{{ path('app_rating_rates', {'id': series.id}) }}"><h1 class=" bg-yellow-400 w-max p-2 px-3 rounded-xl text-black font-semibold hover:bg-yellow-200">Voir les avis</h1></a>
+                        <a class="lg:mt-4 lg:ml-0 ml-5 " href="{{ path('app_rating_rates', {'id': series.id}) }}"><h1 class=" bg-yellow-400 w-max p-2 px-3 rounded-xl text-black font-semibold hover:bg-yellow-200"><i class="fa-solid fa-star"></i> Voir les avis</h1></a>
                     </div>
                 </div>
 
